2024年5月1日晚21点20完成VMMap

--- a/Dll/Dll.vcxproj
+++ b/Dll/Dll.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="ProcessManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SystemHelper.h" />
+    <ClInclude Include="VMMap.h" />
     <ClInclude Include="zconf.h" />
     <ClInclude Include="zlib.h" />
   </ItemGroup>
@@ -181,6 +182,7 @@
     <ClCompile Include="ProcessHelper.cpp" />
     <ClCompile Include="ProcessManager.cpp" />
     <ClCompile Include="SystemHelper.cpp" />
+    <ClCompile Include="VMMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Source.def" />
